--- a/.github/workflows/tag-manager.yml
+++ b/.github/workflows/tag-manager.yml
@@ -11,4 +11,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: phwt/major-tagging-action@v1
+
+      - name: Setup Git
+        run: |
+          git pull
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+
+      - name: Re-tagging major tag
+        shell: bash
+        run: |
+          CURRENT_TAG=$(git describe --tags)
+          MAJOR_TAG=$(awk -F'.' '{print $1}' <<<"$CURRENT_TAG")
+          REMOTE_RESULT=$(git ls-remote --tags origin -l "$MAJOR_TAG")
+          if [[ $REMOTE_RESULT ]]; then
+              echo "Moving major tag '$MAJOR_TAG' to the same commit as '$CURRENT_TAG' tag"
+              git push --delete origin $MAJOR_TAG
+          else
+              echo "'$MAJOR_TAG' tag does not exists and will be created at the same commit as '$CURRENT_TAG' tag"
+          fi
+
+          # Tag current commit with major tag
+          git tag $MAJOR_TAG
+          git push origin $MAJOR_TAG
